--- a/index.html
+++ b/index.html
@@ -129,6 +129,40 @@
                             <div class="overview__rating-count">429 votes</div>
                         </div>
                     </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt quaerat iure soluta nisi sit fugit, excepturi qui rerum repudiandae numquam ut eos quos facilis quo quibusdam ipsum temporibus provident aliquam.
+                            </p>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate earum doloribus ipsa, nisi aperiam libero, laboriosam praesentium repellendus voluptatibus dicta ea quidem ullam. Necessitatibus rem facilis ducimus quaerat, animi nostrum!
+                            </p>
+
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfest included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free wifi in all rooms</li>
+                                <li class="list__item">Air conditioning and heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Perfect for families</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel.
+                                </p>
+                                <div class="recommend__friends">
+                                    <img src="img/user-3.jpg" alt="" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="" class="recommend__photo">
+                                    <img src="img/user-6.jpg" alt="" class="recommend__photo">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-reviews">AAAAAAAAAAAAAAAA</div>
+                    </div>
                 </main>
             </div>
         </div>
