building the user reviews section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,36 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="user-reviews">AAAAAAAAAAAAAAAA</div>
+                        <div class="user-reviews">
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quae amet natus explicabo assumenda nostrum beatae eius reprehenderit porro. Explicabo voluptate, fugit quo placeat id nam aut reiciendis repellat quidem.
+                                    <figcaption class="review__user">
+                                        <img src="img/user-1.jpg" alt="" class="review__photo">
+                                        <div class="review__user-box">
+                                            <p class="review__user-name">Nick Smith</p>
+                                            <p class="review__user-date">Feb 23rd, 2022</p>
+                                        </div>
+                                        <div class="review__rating">7.8</div>
+                                    </figcaption>
+                                </blockquote>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, expedita reprehenderit earum dolorem doloribus perspiciatis quae non similique nam consequatur illo, suscipit ducimus quos cum voluptatibus veniam at unde rem?
+                                    <figcaption class="review__user">
+                                        <img src="img/user-2.jpg" alt="" class="review__photo">
+                                        <div class="review__user-box">
+                                            <p class="review__user-name">Mary Thomas</p>
+                                            <p class="review__user-date">Feb 17rd, 2022</p>
+                                        </div>
+                                        <div class="review__rating">9.3</div>
+                                    </figcaption>
+                                </blockquote>
+                            </figure>
+
+                            <button class="btn-inline">Show all <span>&rarr;</span></button>
+                        </div>
                     </div>
                 </main>
             </div>
